--- a/quiz-loi/index.html
+++ b/quiz-loi/index.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" type="text/css" href="style.css" media="all">
         <link rel="stylesheet" type="text/css" href="main.css">
        <link href='http://fonts.googleapis.com/css?family=Open+Sans+Condensed:300' rel='stylesheet' type='text/css'>
-
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
     </head>
     <body>
     <div id="washington" class="row-offcanvas">
@@ -1579,6 +1579,7 @@
 
     </section>
     </div>
+ 
  
     </body>
 </html>
