[pjlr] enable navigation between sections

--- a/pjlr/index.html
+++ b/pjlr/index.html
@@ -20,59 +20,61 @@
         <h2>Ceci est un chapô pas trop long, mais qui permet de faire au moins une phrase. Ou deux. Voire trois. Non pas trois en fait.</h2>
         <a id="commen" class="p2 scrollTo" href="#page-2">C'est parti !</a>
       </header>
-      <div id="menu">
-          <ul>
-          <li><a href="#" rel="une-phrase">En une phrase</a></li>
-          <li><a href="#" rel="2">En détails</a></li>
-          <li><a href="#" rel="3">Expliqué dans la vraie vie</a></li>
-          <li><a href="#" rel="4">Expliqué avec des poissons</a></li>
-        </ul>
-      </div>
-
-      <div class='isotope'>
-        <div class="pages" id="page-2">
-          <h3><span>#1 Imsi-Catcher</span></h3>
-          <p class="une-phrase">De fausses antennes-relais pour capter <span>tout ce qui passe</span> sur les téléphones portables.</p>
+      <div class="wrapper">
+        <div id="menu">
+            <ul>
+            <li class="une-phrase"><a href="#" rel="une-phrase">En une phrase</a></li>
+            <li class="en-details"><a href="#" rel="en-details">En détails</a></li>
+            <li class="dans-la-vraie-vie"><a href="#" rel="dans-la-vraie-vie">Expliqué dans la vraie vie</a></li>
+            <li class="avec-des-poissons"><a href="#" rel="avec-des-poissons">Expliqué avec des poissons</a></li>
+          </ul>
         </div>
 
-        <div class="pages" id="page-3">
-          <h3><span>#2 Boîte noire</span></h3>
-          <p class="une-phrase">Des dispositifs opaques dont <span>on ne sait pas grand chose</span>, sinon qu'ils équiperont les opérateurs pour détecter des menaces terroristes.</p>
-        </div>
+        <div class='isotope'>
+          <div class="pages" id="page-2">
+            <h3><span>#1 Imsi-Catcher</span></h3>
+            <p class="une-phrase">De fausses antennes-relais pour capter <span>tout ce qui passe</span> sur les téléphones portables.</p>
+          </div>
 
-        <div class="pages" id="page-4">
-          <h3><span>#3 Alerte</span></h3>
-          <p class="une-phrase">La loi permet à un agent d'un service de renseignement qui constaterait des illégalités de les dénoncer auprès de la commission de contrôle.</p>
-        </div>
+          <div class="pages" id="page-3">
+            <h3><span>#2 Boîte noire</span></h3>
+            <p class="une-phrase">Des dispositifs opaques dont <span>on ne sait pas grand chose</span>, sinon qu'ils équiperont les opérateurs pour détecter des menaces terroristes.</p>
+          </div>
 
-        <div class="pages" id="page-5">
-          <h3><span>#4 Balise</span></h3>
-          <p class="une-phrase">Un appareil qu'on pose sur un objet ou un véhicule, qui permet de géolocaliser un suspect.</p>
-        </div>
+          <div class="pages" id="page-4">
+            <h3><span>#3 Alerte</span></h3>
+            <p class="une-phrase">La loi permet à un agent d'un service de renseignement qui constaterait des illégalités de les dénoncer auprès de la commission de contrôle.</p>
+          </div>
 
-        <div class="pages" id="page-6">
-          <h3><span>#5 CNCTR</span></h3>
-          <p class="une-phrase">La nouvelle commission chargée de surveiller les surveillants.</p>
-        </div>
+          <div class="pages" id="page-5">
+            <h3><span>#4 Balise</span></h3>
+            <p class="une-phrase">Un appareil qu'on pose sur un objet ou un véhicule, qui permet de géolocaliser un suspect.</p>
+          </div>
 
-        <div class="pages" id="page-7">
-          <h3><span>#6 Conseil d'Etat</span></h3>
-          <p class="une-phrase">C'est la plus haute juridiction administrative qui est amenée à décider, en dernier recours, si une surveillance est illégale.</p>
-        </div>
+          <div class="pages" id="page-6">
+            <h3><span>#5 CNCTR</span></h3>
+            <p class="une-phrase">La nouvelle commission chargée de surveiller les surveillants.</p>
+          </div>
 
-        <div class="pages" id="page-8">
-          <h3><span>#7 Conservation</span></h3>
-          <p class="une-phrase">Selon leur nature, les données collectées sont conservées plus ou moins longtemps. Parfois, c'est vraiment long.</p>
-        </div>
+          <div class="pages" id="page-7">
+            <h3><span>#6 Conseil d'Etat</span></h3>
+            <p class="une-phrase">C'est la plus haute juridiction administrative qui est amenée à décider, en dernier recours, si une surveillance est illégale.</p>
+          </div>
 
-        <div class="pages" id="page-9">
-          <h3><span>#8 DGSE</span></h3>
-          <p class="une-phrase">La CIA française.</p>
-        </div>
+          <div class="pages" id="page-8">
+            <h3><span>#7 Conservation</span></h3>
+            <p class="une-phrase">Selon leur nature, les données collectées sont conservées plus ou moins longtemps. Parfois, c'est vraiment long.</p>
+          </div>
 
-        <div class="pages" id="page-10">
-          <h3><span>#9 DGSI</span></h3>
-          <p class="une-phrase">Le FBI français.</p>
+          <div class="pages" id="page-9">
+            <h3><span>#8 DGSE</span></h3>
+            <p class="une-phrase">La CIA française.</p>
+          </div>
+
+          <div class="pages" id="page-10">
+            <h3><span>#9 DGSI</span></h3>
+            <p class="une-phrase">Le FBI français.</p>
+          </div>
         </div>
       </div>
 
