[jplr] remove useless js

--- a/pjlr/index.html
+++ b/pjlr/index.html
@@ -7,18 +7,16 @@
         <link rel="stylesheet" type="text/css" href="./css/style.css" media="all">
         <link href='http://fonts.googleapis.com/css?family=Open+Sans+Condensed:300' rel='stylesheet' type='text/css'>
         <link href='http://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
-        <script src="//code.jquery.com/jquery-1.10.2.js"></script>
-        <script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
+        <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 
         <script src="./js/jquery.min.js"></script>
         <script src="./js/isotope.min.js"></script>
-
     </head>
     <body>
       <header>
         <h1><span>Loi renseignement&nbsp;:</span> tout comprendre en quelques mots</h1> 
         <h2>Ceci est un chapô pas trop long, mais qui permet de faire au moins une phrase. Ou deux. Voire trois. Non pas trois en fait.</h2>
-        <a id="commen" class="p2 scrollTo" href="#page-2">C'est parti !</a>
+        <a id="commen" class="p2 scrollTo" href="#menu">C'est parti !</a>
       </header>
       <div class="wrapper">
         <div id="menu">
@@ -32,48 +30,75 @@
 
         <div class='isotope'>
           <div class="pages" id="page-2">
-            <h3><span>#1 Imsi-Catcher</span></h3>
+            <h3><span>Imsi-Catcher</span></h3>
             <p class="une-phrase">De fausses antennes-relais pour capter <span>tout ce qui passe</span> sur les téléphones portables.</p>
+            <p class="en-details"></p>
+            <p class="dans-la-vraie-vie"></p>
+            <p class="avec-des-poissons"></p>
           </div>
 
           <div class="pages" id="page-3">
-            <h3><span>#2 Boîte noire</span></h3>
+            <h3><span>Boîte noire</span></h3>
             <p class="une-phrase">Des dispositifs opaques dont <span>on ne sait pas grand chose</span>, sinon qu'ils équiperont les opérateurs pour détecter des menaces terroristes.</p>
+            <p class="en-details">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec a diam lectus. Sed sit amet ipsum mauris. Maecenas congue ligula ac quam viverra nec consectetur ante hendrerit. Donec et mollis dolor. Praesent et diam eget libero egestas mattis sit amet vitae augue. Nam tincidunt congue enim, ut porta lorem lacinia consectetur.</p>
+            <p class="dans-la-vraie-vie"></p>
+            <p class="avec-des-poissons"></p>
           </div>
 
           <div class="pages" id="page-4">
-            <h3><span>#3 Alerte</span></h3>
+            <h3><span>Alerte</span></h3>
             <p class="une-phrase">La loi permet à un agent d'un service de renseignement qui constaterait des illégalités de les dénoncer auprès de la commission de contrôle.</p>
+            <p class="en-details">Lorem ipsum dolor sit amet</p>
+            <p class="dans-la-vraie-vie"></p>
+            <p class="avec-des-poissons"></p>
           </div>
 
           <div class="pages" id="page-5">
-            <h3><span>#4 Balise</span></h3>
+            <h3><span>Balise</span></h3>
             <p class="une-phrase">Un appareil qu'on pose sur un objet ou un véhicule, qui permet de géolocaliser un suspect.</p>
+            <p class="en-details">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec a diam lectus. Sed sit amet ipsum mauris. Maecenas congue ligula ac quam viverra nec consectetur ante hendrerit. Donec et mollis dolor. Praesent et diam eget libero egestas mattis sit amet vitae augue. Nam tincidunt congue enim, ut porta lorem lacinia consectetur.</p>
+            <p class="dans-la-vraie-vie"></p>
+            <p class="avec-des-poissons"></p>
           </div>
 
           <div class="pages" id="page-6">
-            <h3><span>#5 CNCTR</span></h3>
+            <h3><span>CNCTR</span></h3>
             <p class="une-phrase">La nouvelle commission chargée de surveiller les surveillants.</p>
+            <p class="en-details">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec a diam lectus. Sed sit amet ipsum mauris.</p>
+            <p class="dans-la-vraie-vie"></p>
+            <p class="avec-des-poissons"></p>
           </div>
 
           <div class="pages" id="page-7">
-            <h3><span>#6 Conseil d'Etat</span></h3>
+            <h3><span>Conseil d'Etat</span></h3>
             <p class="une-phrase">C'est la plus haute juridiction administrative qui est amenée à décider, en dernier recours, si une surveillance est illégale.</p>
+            <p class="en-details">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec a diam lectus. Sed sit amet ipsum mauris. Maecenas congue ligula ac quam viverra nec consectetur ante hendrerit. Donec et mollis dolor. Praesent et diam eget libero egestas mattis sit amet vitae augue.</p>
+            <p class="dans-la-vraie-vie"></p>
+            <p class="avec-des-poissons"></p>
           </div>
 
           <div class="pages" id="page-8">
-            <h3><span>#7 Conservation</span></h3>
+            <h3><span>Conservation</span></h3>
             <p class="une-phrase">Selon leur nature, les données collectées sont conservées plus ou moins longtemps. Parfois, c'est vraiment long.</p>
+            <p class="en-details"></p>
+            <p class="dans-la-vraie-vie"></p>
+            <p class="avec-des-poissons"></p>
           </div>
 
           <div class="pages" id="page-9">
-            <h3><span>#8 DGSE</span></h3>
+            <h3><span>DGSE</span></h3>
             <p class="une-phrase">La CIA française.</p>
+            <p class="en-details"></p>
+            <p class="dans-la-vraie-vie"></p>
+            <p class="avec-des-poissons"></p>
           </div>
 
           <div class="pages" id="page-10">
-            <h3><span>#9 DGSI</span></h3>
+            <h3><span>DGSI</span></h3>
             <p class="une-phrase">Le FBI français.</p>
+            <p class="en-details"></p>
+            <p class="dans-la-vraie-vie"></p>
+            <p class="avec-des-poissons"></p>
           </div>
         </div>
       </div>
