--- a/pjlr/index.html
+++ b/pjlr/index.html
@@ -17,10 +17,10 @@
       <div class="wrapper">
         <div id="menu">
             <ul>
-            <li class="une-phrase"><a href="#" rel="une-phrase">En une phrase</a></li>
-            <li class="en-details"><a href="#" rel="en-details">En détails</a></li>
-            <li class="dans-la-vraie-vie"><a href="#" rel="dans-la-vraie-vie">Expliqué dans la vraie vie</a></li>
-            <li class="avec-des-poissons"><a href="#" rel="avec-des-poissons">Expliqué avec des poissons</a></li>
+            <li class="une-phrase"><div><p><a href="#" rel="une-phrase">En une phrase</a></p></div></li>
+            <li class="en-details"><div><p><a href="#" rel="en-details">En détails</a></p></div></li>
+            <li class="dans-la-vraie-vie"><div><p><a href="#" rel="dans-la-vraie-vie">Expliqué dans la vraie vie</a></p></div></li>
+            <li class="avec-des-poissons"><div><p><a href="#" rel="avec-des-poissons">Expliqué avec des poissons</a></p></div></li>
           </ul>
         </div>
 
