--- a/pjlr/index.html
+++ b/pjlr/index.html
@@ -43,8 +43,8 @@
 
           <div class="pages" id="page-4">
             <h3><span>Alerte</span></h3>
-            <p class="une-phrase">La loi permet à un agent d'un service de renseignement qui constaterait des illégalités de les dénoncer auprès de la commission de contrôle.</p>
-            <p class="en-details">Lorem ipsum dolor sit amet</p>
+            <p class="une-phrase">Le projet de loi permet à un agent d'un service de renseignement qui constaterait des illégalités de les dénoncer mais pas publiquement.</p>
+            <p class="en-details">Pour le rapporteur du projet de loi, le député socialiste Jean-Jacques Urvoas, «<em>l’affaire Snowden a démontré la nécessité de créer les conditions pour que des agents puissent dénoncer des abus commis par les services de renseignement</em>». Un amendement adopté à l'Assemblée nationale les autorise donc à dénoncer les illégalités auprès de la CNCTR, qui peut alors saisir le procureur de la République ou le Conseil d'Etat. Le ministre de la Défense, lui, craint une «<em>incitation à la délation</em>».</p>
             <p class="dans-la-vraie-vie"></p>
             <p class="avec-des-poissons"></p>
           </div>
@@ -52,7 +52,7 @@
           <div class="pages" id="page-5">
             <h3><span>Balise</span></h3>
             <p class="une-phrase">Un appareil qu'on pose sur un objet ou un véhicule, qui permet de géolocaliser un suspect.</p>
-            <p class="en-details">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec a diam lectus. Sed sit amet ipsum mauris. Maecenas congue ligula ac quam viverra nec consectetur ante hendrerit. Donec et mollis dolor. Praesent et diam eget libero egestas mattis sit amet vitae augue. Nam tincidunt congue enim, ut porta lorem lacinia consectetur.</p>
+            <p class="en-details">Pour suivre une grosse cylindrée chargée de shit qui remonte à toute bringue le Maroc, les policiers agissant dans le cadre d'une enquête judiciaire utilisent parfois des balises : de petits boîtiers discrètement installés sur, sous ou dans les véhicules pour les suivre à la trace. Les services de renseignement pourront faire de même, sans juge, mais après avis de la commission de contrôle.</p>
             <p class="dans-la-vraie-vie"></p>
             <p class="avec-des-poissons"></p>
           </div>
@@ -61,7 +61,7 @@
             <h3><span>CNCTR</span></h3>
             <p class="une-phrase">La nouvelle commission chargée de surveiller les surveillants.</p>
             <p class="en-details">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec a diam lectus. Sed sit amet ipsum mauris.</p>
-            <p class="dans-la-vraie-vie"></p>
+            <p class="dans-la-vraie-vie">Avoir un mouchard sous sa voiture, c'est un peu comme si vous étiez suivi en permanence par un agent, même si le mouchard est plus idiot : il ne recueille que les déplacements.</p>
             <p class="avec-des-poissons"></p>
           </div>
 
@@ -96,6 +96,7 @@
             <p class="dans-la-vraie-vie"></p>
             <p class="avec-des-poissons"></p>
           </div>
+
         </div>
       </div>
 
