[pjlr] new items in menu

--- a/pjlr/index.html
+++ b/pjlr/index.html
@@ -19,8 +19,10 @@
             <ul>
             <li class="une-phrase"><div><p><a href="#" rel="une-phrase">En une phrase</a></p></div></li>
             <li class="en-details"><div><p><a href="#" rel="en-details">En détails</a></p></div></li>
+            <li class="quel-probleme"><div><p><a href="#" rel="quel-probleme">Quel est le problème ?</a></p></div></li>
             <li class="dans-la-vraie-vie"><div><p><a href="#" rel="dans-la-vraie-vie">Expliqué dans la vraie vie</a></p></div></li>
             <li class="avec-des-poissons"><div><p><a href="#" rel="avec-des-poissons">Expliqué avec des poissons</a></p></div></li>
+            <li class="savoir-plus"><div><p><a href="#" rel="savoir-plus">En savoir plus</a></p></div></li>
           </ul>
         </div>
 
