--- a/pjlr/index.html
+++ b/pjlr/index.html
@@ -31,46 +31,52 @@
             <h3><span>Imsi-Catcher</span></h3>
             <p class="une-phrase">De fausses antennes-relais pour capter <span>tout ce qui passe</span> sur les téléphones portables.</p>
             <p class="en-details"></p>
+            <p class="quel-probleme"></p>
             <p class="dans-la-vraie-vie"></p>
             <p class="avec-des-poissons"></p>
           </div>
 
           <div class="pages" id="page-3">
             <h3><span>Boîte noire</span></h3>
-            <p class="une-phrase">Des dispositifs opaques dont <span>on ne sait pas grand chose</span>, sinon qu'ils équiperont les opérateurs pour détecter des menaces terroristes.</p>
-            <p class="en-details">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec a diam lectus. Sed sit amet ipsum mauris. Maecenas congue ligula ac quam viverra nec consectetur ante hendrerit. Donec et mollis dolor. Praesent et diam eget libero egestas mattis sit amet vitae augue. Nam tincidunt congue enim, ut porta lorem lacinia consectetur.</p>
-            <p class="dans-la-vraie-vie"></p>
-            <p class="avec-des-poissons"></p>
+            <p class="une-phrase">Des dispositifs opaques dont <span>on ne sait pas grand chose</span>, sinon qu'ils équiperont les opérateurs et les hébergeurs pour essayer de détecter de potentielles menaces terroristes.</p>
+            <p class="en-details">C'est l'un des articles les plus controversés du projet de loi : celui qui prévoit de <em>«détecter une menace terroriste sur la base de traitements automatisés»</em> de données, par des algorithmes, directement sur les réseaux des opérateurs de télécommunications et des hébergeurs internet. Devant la fronde de ces derniers (certains ont menacé de quitter la France), le gouvernement a apporté quelques limitations, notamment sur le <em>«principe de proportionnalité»</em> : les «boîtes noires» devraient passer au tamis les données de connexion de services précis, et non tout ce qui transite chez les acteurs concernés. Les «boîtes noires» sont aussi censées être expérimentales, jusqu'en décembre 2018, à charge pour le gouvernement de rendre un rapport d'évaluation en juin de la même année. </p>
+            <p class="quel-probleme">Le gouvernement se défend mordicus de mettre en place une surveillance de masse. Il n'empêche : pour détecter les éventuels comportements suspects, il faudra bien «mouliner» une grande quantité de données. Au risque que se retrouvent pris dans les filets des internautes simplement trop curieux... Pas franchement rassurés, plusieurs hébergeurs soulignent aussi que les promesses du gouvernement, notamment sur le fait qu'il leur reviendrait de faire le tri entre les données de connexion et le contenu des communications, n'ont pas été inscrites dans la loi mais renvoyées à un décret d'application, sur lequel il est beaucoup plus facile de revenir. Plus profondément, cette technique signifie un changement de paradigme de la surveillance : les services ne partent plus d’une cible pour trouver des informations, mais des métadonnées pour trouver une cible.</p>
+            <p class="dans-la-vraie-vie">Imaginons que l'on remplace les communications numériques par le courrier, et les opérateurs internet par la Poste, DHL, Fedex, etc. Dans les grands centres de tri, des machines installées par les services de renseignement étudient toutes les enveloppes : de quelle ville partent-elles ? Où vont-elles ? A quelle date ? Quelle est la taille et la forme du pli ? A priori, elles n'ouvrent pas le courrier, ne lisent pas les lettres, et ne peuvent pas non plus lire les noms écrits sur les enveloppes, mais tout de même les adresses. En fonction de critères définis à l'avance, ces machines mettent de côté les courriers jugés suspects, à cause de la couleur de l'enveloppe ou de l'adresse des destinaires. Le fruit de cet collecte est ensuite soumis à une commission, qui donne son accord pour transmettre les noms des suspects aux services de renseignement.</p>
+            <p class="avec-des-poissons">C'est une pêche aux filets dérivants : tout est attrapé et le tri est ensuite fait sur le bateau.</p>
           </div>
 
           <div class="pages" id="page-4">
             <h3><span>Alerte</span></h3>
             <p class="une-phrase">Le projet de loi permet à un agent d'un service de renseignement qui constaterait des illégalités de les dénoncer mais pas publiquement.</p>
             <p class="en-details">Pour le rapporteur du projet de loi, le député socialiste Jean-Jacques Urvoas, «<em>l’affaire Snowden a démontré la nécessité de créer les conditions pour que des agents puissent dénoncer des abus commis par les services de renseignement</em>». Un amendement adopté à l'Assemblée nationale les autorise donc à dénoncer les illégalités auprès de la CNCTR, qui peut alors saisir le procureur de la République ou le Conseil d'Etat. Le ministre de la Défense, lui, craint une «<em>incitation à la délation</em>».</p>
+            <p class="quel-probleme">Toute la procédure reste couverte par le secret-défense (la CNCTR y est habilitée). Il y a donc de fortes chances que le public n'en ait jamais connaissance, ou alors bien longtemps après les faits. Sauf, évidemment, si le lanceur d'alerte en parle à un journaliste, comme l'a fait Edward Snowden. Auquel cas il risque toujours un sévère retour de bâton : en France, la compromission du secret de la défense nationale est punie de cinq ans d'emprisonnement et 75000 euros d'amende.</p>
             <p class="dans-la-vraie-vie"></p>
             <p class="avec-des-poissons"></p>
           </div>
 
           <div class="pages" id="page-5">
             <h3><span>Balise</span></h3>
-            <p class="une-phrase">Un appareil qu'on pose sur un objet ou un véhicule, qui permet de géolocaliser un suspect.</p>
+            <p class="une-phrase">Un appareil qu'on pose sur un objet ou un véhicule, qui permet de suivre un suspect.</p>
             <p class="en-details">Pour suivre une grosse cylindrée chargée de shit qui remonte à toute bringue le Maroc, les policiers agissant dans le cadre d'une enquête judiciaire utilisent parfois des balises : de petits boîtiers discrètement installés sur, sous ou dans les véhicules pour les suivre à la trace. Les services de renseignement pourront faire de même, sans juge, mais après avis de la commission de contrôle.</p>
-            <p class="dans-la-vraie-vie"></p>
+            <p class="quel-probleme"></p>
+            <p class="dans-la-vraie-vie">Avoir un mouchard sous sa voiture, c'est un peu comme si vous étiez suivi en permanence par un agent, même si le mouchard est plus idiot : il ne recueille que les déplacements.</p>
             <p class="avec-des-poissons"></p>
           </div>
 
           <div class="pages" id="page-6">
             <h3><span>CNCTR</span></h3>
             <p class="une-phrase">La nouvelle commission chargée de surveiller les surveillants.</p>
-            <p class="en-details">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec a diam lectus. Sed sit amet ipsum mauris.</p>
-            <p class="dans-la-vraie-vie">Avoir un mouchard sous sa voiture, c'est un peu comme si vous étiez suivi en permanence par un agent, même si le mouchard est plus idiot : il ne recueille que les déplacements.</p>
+            <p class="en-details">La Commission nationale de contrôle des techniques de renseignement (CNCTR) remplace la Commission nationale de contrôle des interceptions de sécurité (CNCIS), jusqu'ici chargée d'encadrer les écoutes. Elle sera composée de treize membres : trois députés, trois sénateurs, trois membres du Conseil d'Etat, trois membres de la Cour de cassation et un spécialiste des réseaux nommé par l'Arcep. Elle donne un avis sur toute mise en œuvre d'une technique de renseignement, sauf en cas d'urgence, et peut contrôler en aval l'activité des services. Si elle estime que la loi n'est pas respectée, elle peut saisir le Conseil d'Etat.</p>
+            <p class="quel-probleme">L'actuel président de la CNCIS, Jean-Marie Delarue, est loin d'être convaincu que la nouvelle commission aura véritablement les moyens d'assurer sa mission. Il doute fortement, notamment, de sa capacité à contrôler les fameuses «boîtes noires», et juge que le contrôle repose sur les déclarations des espions. Or, remarque avec malice ce familier des services de renseignement, <em>«le principe de véracité n'est pas le premier principe que l'on apprend dans les écoles de police»</em>... Raison pour laquelle il est aussi très réservé sur les procédures d'urgence [voir Urgence].</p>
+            <p class="dans-la-vraie-vie">La CNCTR, c'est un peu comme la police des polices, sans pouvoir de contrainte. Un organe consultatif, donc.</p>
             <p class="avec-des-poissons"></p>
           </div>
 
           <div class="pages" id="page-7">
             <h3><span>Conseil d'Etat</span></h3>
-            <p class="une-phrase">C'est la plus haute juridiction administrative qui est amenée à décider, en dernier recours, si une surveillance est illégale.</p>
-            <p class="en-details">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec a diam lectus. Sed sit amet ipsum mauris. Maecenas congue ligula ac quam viverra nec consectetur ante hendrerit. Donec et mollis dolor. Praesent et diam eget libero egestas mattis sit amet vitae augue.</p>
+            <p class="une-phrase">C'est la plus haute juridiction administrative qui est amenée à décider, en dernier recours, si une surveillance est légale ou non.</p>
+            <p class="en-details">Si la CNCTR estime qu'une surveillance contrevient à la loi, elle peut saisir le Conseil d'Etat. Lequel peut aussi être saisi par un citoyen qui pense être surveillé illégalement, à condition qu'il se soit déjà adressé à la CNCTR et n'ait pas été satisfait de la réponse.</p>
+            <p class="quel-probleme">La procédure devant le Conseil d'Etat est couverte par le secret-défense. Autrement dit, l'avocat d'un citoyen lambda qui aurait eu le courage de le saisir n'aura pas accès à toutes les pièces du dossier.</p>
             <p class="dans-la-vraie-vie"></p>
             <p class="avec-des-poissons"></p>
           </div>
@@ -79,6 +85,7 @@
             <h3><span>Conservation</span></h3>
             <p class="une-phrase">Selon leur nature, les données collectées sont conservées plus ou moins longtemps. Parfois, c'est vraiment long.</p>
             <p class="en-details"></p>
+            <p class="quel-probleme"></p>
             <p class="dans-la-vraie-vie"></p>
             <p class="avec-des-poissons"></p>
           </div>
@@ -87,6 +94,7 @@
             <h3><span>DGSE</span></h3>
             <p class="une-phrase">La CIA française.</p>
             <p class="en-details"></p>
+            <p class="quel-probleme"></p>
             <p class="dans-la-vraie-vie"></p>
             <p class="avec-des-poissons"></p>
           </div>
@@ -95,6 +103,7 @@
             <h3><span>DGSI</span></h3>
             <p class="une-phrase">Le FBI français.</p>
             <p class="en-details"></p>
+            <p class="quel-probleme"></p>
             <p class="dans-la-vraie-vie"></p>
             <p class="avec-des-poissons"></p>
           </div>
