--- a/pjlr/index.html
+++ b/pjlr/index.html
@@ -29,7 +29,7 @@
         <div class='isotope'>
           <div class="pages" id="page-2">
             <h3><span>Imsi-Catcher</span></h3>
-            <p class="une-phrase">Une fausse antenne-relais pour capter tout ce qui passe sur les téléphones portables.</p>
+            <p class="une-phrase">Une fausse antenne-relais pour <span>capter tout ce qui passe</span> sur les téléphones portables.</p>
             <p class="en-details">L'Imsi-catcher imite le fonctionnement des dizaines de milliers d’antennes-relais qui maillent le territoire français et permettent la transmission des communications sur mobile. Il fait en sorte que les téléphones portables se connectent en priorité à lui, dans un périmètre qui peut aller jusqu’à 500 mètres. Ainsi, l’Imsi-catcher intercepte, décrypte puis renvoie le trafic vers une antenne-relais légitime, de manière à ce que les utilisateurs ne se rendent pas compte de la présence de cet «intermédiaire» très curieux.</p>
             <p class="quel-probleme">Les Imsi-Catchers ramassent tout dans un périmètre défini. Lorsqu'ils seront utilisés pour écouter des suspects, la demande devra être suffisamment précise pour ne pas intercepter les communications de tous les passants. En revanche, quand ils captureront les données de connexion (tout sauf le contenu des communications [voir Métadonnées]), ils ramasseront tout de manière indiscriminée. Le tri sera fait a posteriori, en fonction des informations intéressants l'enquête.</p>
             <p class="dans-la-vraie-vie">Remplaçons les communications téléphoniques par le courrier postal, distribué par le facteur, et l'Imsi-Catcher par un postier diligent. Celui-ci noterait tout ce qu'il distribue dans sa tournée&nbsp;: le volume du pli, la date d'envoi, les adresses de l'expéditeur et du destinataire. Dans certains cas, il pourrait même ouvrir les enveloppes pour lire les courriers.</p>
@@ -47,7 +47,7 @@
 
           <div class="pages" id="page-4">
             <h3><span>Alerte</span></h3>
-            <p class="une-phrase">Le projet de loi permet à un agent d'un service de renseignement qui constaterait des illégalités de les dénoncer mais pas publiquement.</p>
+            <p class="une-phrase">Le projet de loi permet à un agent d'un service de renseignement qui constaterait <span>des illégalités</span> de les dénoncer mais pas publiquement.</p>
             <p class="en-details">Pour le rapporteur du projet de loi, le député socialiste Jean-Jacques Urvoas, «<em>l’affaire Snowden a démontré la nécessité de créer les conditions pour que des agents puissent dénoncer des abus commis par les services de renseignement</em>». Un amendement adopté à l'Assemblée nationale les autorise donc à dénoncer les illégalités auprès de la CNCTR, qui peut alors saisir le procureur de la République ou le Conseil d'Etat. Le ministre de la Défense, lui, craint une «<em>incitation à la délation</em>».</p>
             <p class="quel-probleme">Toute la procédure reste couverte par le secret-défense (la CNCTR y est habilitée). Il y a donc de fortes chances que le public n'en ait jamais connaissance, ou alors bien longtemps après les faits. Sauf, évidemment, si le lanceur d'alerte en parle à un journaliste, comme l'a fait Edward Snowden. Auquel cas il risque toujours un sévère retour de bâton : en France, la compromission du secret de la défense nationale est punie de cinq ans d'emprisonnement et 75000 euros d'amende.</p>
             <p class="dans-la-vraie-vie"></p>
@@ -56,7 +56,7 @@
 
           <div class="pages" id="page-5">
             <h3><span>Balise</span></h3>
-            <p class="une-phrase">Un appareil qu'on pose sur un objet ou un véhicule, qui permet de suivre un suspect.</p>
+            <p class="une-phrase">Un appareil qu'on pose sur un objet ou un véhicule, qui <span>permet de suivre</span> un suspect.</p>
             <p class="en-details">Pour suivre une grosse cylindrée chargée de shit qui remonte à toute bringue le Maroc, les policiers agissant dans le cadre d'une enquête judiciaire utilisent parfois des balises : de petits boîtiers discrètement installés sur, sous ou dans les véhicules pour les suivre à la trace. Les services de renseignement pourront faire de même, sans juge, mais après avis de la commission de contrôle.</p>
             <p class="quel-probleme"></p>
             <p class="dans-la-vraie-vie">Avoir un mouchard sous sa voiture, c'est un peu comme si vous étiez suivi en permanence par un agent, même si le mouchard est plus idiot : il ne recueille que les déplacements.</p>
@@ -65,7 +65,7 @@
 
           <div class="pages" id="page-6">
             <h3><span>CNCTR</span></h3>
-            <p class="une-phrase">La nouvelle commission chargée de surveiller les surveillants.</p>
+            <p class="une-phrase">La <span>nouvelle commission</span> chargée de surveiller les surveillants.</p>
             <p class="en-details">La Commission nationale de contrôle des techniques de renseignement (CNCTR) remplace la Commission nationale de contrôle des interceptions de sécurité (CNCIS), jusqu'ici chargée d'encadrer les écoutes. Elle sera composée de treize membres : trois députés, trois sénateurs, trois membres du Conseil d'Etat, trois membres de la Cour de cassation et un spécialiste des réseaux nommé par l'Arcep. Elle donne un avis sur toute mise en œuvre d'une technique de renseignement, sauf en cas d'urgence, et peut contrôler en aval l'activité des services. Si elle estime que la loi n'est pas respectée, elle peut saisir le Conseil d'Etat.</p>
             <p class="quel-probleme">L'actuel président de la CNCIS, Jean-Marie Delarue, est loin d'être convaincu que la nouvelle commission aura véritablement les moyens d'assurer sa mission. Il doute fortement, notamment, de sa capacité à contrôler les fameuses «boîtes noires», et juge que le contrôle repose sur les déclarations des espions. Or, remarque avec malice ce familier des services de renseignement, <em>«le principe de véracité n'est pas le premier principe que l'on apprend dans les écoles de police»</em>... Raison pour laquelle il est aussi très réservé sur les procédures d'urgence [voir Urgence].</p>
             <p class="dans-la-vraie-vie">La CNCTR, c'est un peu comme la police des polices, sans pouvoir de contrainte. Un organe consultatif, donc.</p>
@@ -74,7 +74,7 @@
 
           <div class="pages" id="page-7">
             <h3><span>Conseil d'Etat</span></h3>
-            <p class="une-phrase">C'est la plus haute juridiction administrative qui est amenée à décider, en dernier recours, si une surveillance est légale ou non.</p>
+            <p class="une-phrase">C'est <span>la plus haute juridiction administrative</span> qui est amenée à décider, en dernier recours, si une surveillance est légale ou non.</p>
             <p class="en-details">Si la CNCTR estime qu'une surveillance contrevient à la loi, elle peut saisir le Conseil d'Etat. Lequel peut aussi être saisi par un citoyen qui pense être surveillé illégalement, à condition qu'il se soit déjà adressé à la CNCTR et n'ait pas été satisfait de la réponse.</p>
             <p class="quel-probleme">La procédure devant le Conseil d'Etat est couverte par le secret-défense. Autrement dit, l'avocat d'un citoyen lambda qui aurait eu le courage de le saisir n'aura pas accès à toutes les pièces du dossier.</p>
             <p class="dans-la-vraie-vie"></p>
@@ -83,7 +83,7 @@
 
           <div class="pages" id="page-8">
             <h3><span>Conservation</span></h3>
-            <p class="une-phrase">Selon leur nature, les données collectées sont conservées plus ou moins longtemps. Parfois, c'est vraiment long.</p>
+            <p class="une-phrase">Selon leur nature, les données collectées sont conservées plus ou moins longtemps. Parfois, <span>c'est vraiment long</span>.</p>
             <p class="en-details">Les données de connexion (qui communique avec qui ou quoi, quand, combien de temps, où) peuvent être conservées jusqu'à cinq ans. Pour le reste (écoutes téléphoniques, enregistrements, images, etc.), le délai est de six mois à compter de leur recueil, et de 30 à 90 jours, selon les cas, à partir de leur première exploitation. Quand les données sont «chiffrées» (autrement dit cryptées), les services peuvent les conserver jusqu'à ce qu'ils puissent les lire, soit presque indéfiniment. </p>
             <p class="quel-probleme">De loi en loi, la durée de conservation des données a une nette tendance à s'allonger. Pour les données de connexion, elle était déjà, jusqu'ici, de trois ans. Pour plusieurs députés verts, qui ont tenté d'amender le texte sur ce point, <em>«vu l'importance quantitative des données qui pourront être collectées, il semble dangereux de prévoir une durée de conservation trop longue»</em>, qui pourrait en prime se heurter à la jurisprudence de la Cour européenne des droits de l'homme. Le cas des données chiffrées est plus épineux encore, puisque les données «en clair» qui leur sont associées seront elles aussi conservées aussi longtemps que le contenu des communications n'aura pas été décrypté : or ces données de connexion sont très bavardes [voir Métadonnées].</p>
             <p class="dans-la-vraie-vie"></p>
@@ -92,7 +92,7 @@
 
           <div class="pages" id="page-9">
             <h3><span>DGSE</span></h3>
-            <p class="une-phrase">Les services extérieurs français, équivalent de la CIA.</p>
+            <p class="une-phrase">Les services <span>extérieurs</span> français, équivalent de la <span>CIA</span>.</p>
             <p class="en-details">La Direction générale de la sécurité extérieure agit principalement en dehors des frontières. Mais c'est aussi le service le mieux doté en ressources financières, techniques et humaines : un peu plus de 700 millions annuels pour 5000 salariés. Selon <em>Le Monde<em>, la DGSE intercepterait massivement des communications à l'intérieur du territoire et les mettrait à disposition des autres services de renseignement, ce que le gouvernement dément [voir PNCD].</p>
             <p class="quel-probleme"></p>
             <p class="dans-la-vraie-vie"></p>
@@ -101,7 +101,7 @@
 
           <div class="pages" id="page-10">
             <h3><span>DGSI</span></h3>
-            <p class="une-phrase">Les services intérieurs français, équivalent du FBI.</p>
+            <p class="une-phrase">Les services <span>intérieurs</span> français, équivalent du <span>FBI</span>.</p>
             <p class="en-details">C'est à la fois le service de contre-espionnage et le principal service antiterroriste. Jusqu'à récemment, il s'appelait la DCRI (Direction centrale du renseignement intérieur), ainsi baptisé par Nicolas Sarkozy au début de son mandat en 2008. Le précédent président avait regroupé les célèbres Renseignement généraux (RG) avec la Direction de la surveillance du territoire (DST), connue pour avoir posé clandestinement des micros au <em>Canard enchaîné</em> dans les années 1970 et retourné un agent du KGB au début des années 1980.</p>
             <p class="quel-probleme"></p>
             <p class="dans-la-vraie-vie"></p>
@@ -110,7 +110,7 @@
 
           <div class="pages" id="page-11">
             <h3><span>Entourage</span></h3>
-            <p class="une-phrase">Les personnes faisant partie de l'entourage d'un suspect peuvent, elles aussi, être surveillées.</p>
+            <p class="une-phrase">Les personnes faisant partie de l'entourage d'un suspect peuvent, elles aussi, <span>être surveillées</span>.</p>
             <p class="en-details">Pour être surveillé, pas besoin d'être présumé complice : il suffit d'être suspecté de <em>«jouer un rôle d'intermédiaire, volontaire ou non»</em>. Auquel cas on peut être soumis au même traitement. La disposition est censée éviter qu'un suspect n'utilise, par exemple, le téléphone de sa petite amie pour éviter d'être écouté.</p>
             <p class="quel-probleme">Tout le problème est de savoir où on s'arrête. Pour l'actuel gendarme des écoutes, Jean-Marie Delarue, encore faut-il qu'il y ait des faits précis pour justifier une mise sous surveillance.</p>
             <p class="dans-la-vraie-vie">Pour se renseigner sur William, les services pourront écouter sa femme Kate, son père Charles, voire ses grands-parents Elisabeth et Philip. Que ceux-ci soit complices volontairement ou à leur insu.</p>
@@ -119,7 +119,7 @@
 
           <div class="pages" id="page-12">
             <h3><span>Keylogger</span></h3>
-            <p class="une-phrase">Un logiciel espion installé dans un ordinateur, qui enregistre et transmet toutes les touches frappées sur le clavier de la machine.</p>
+            <p class="une-phrase">Un <span>logiciel espion</span> installé dans un ordinateur, qui enregistre et transmet toutes les touches frappées sur le clavier de la machine.</p>
             <p class="en-details">Ce dispositif technique, peu connu, est déjà utilisé par les policiers sous l'autorité d'un juge&nbsp;: il s'agit, à proprement parler, de piratage légal. Il complètera désormais la trousse à outils des services de renseignement. Grâce à ces petits programmes informatiques, toutes les touches frappées sur un clavier sont enregistrées. Ce qui permet donc de contourner l'usage éventuel de cryptographie puisque tous les caractères sont captés <em>avant</em> d'être cryptés.</p>
             <p class="quel-probleme">Ces petits logiciels espions comptent parmi les plus intrusifs dans la boîte à outil de la police. Ils ne pouvaient être utilisés que sous l'autorité d'un magistrat. Jusqu'à cette loi. Le Syndicat de la magistrature, classé à gauche, s'est inquiété du transfert automatique de ces techniques très intrusives aux services de renseignement, qui n'agissent pas sous l'autorité d'un magistrat, garant des libertés publiques en France.</p>
             <p class="dans-la-vraie-vie">Si votre ordinateur était un carnet, dans lequel vous écririez ce que bon vous semble, le logiciel espion deviendrait une personne, qui lirait par-dessus votre épaule tout ce que vous rédigez. Peu importe que vous raturiez ou déchiriez les pages&nbsp;: tout ce qui a été écrit est lu et enregistré par ce regard indiscret.</p>
@@ -128,7 +128,7 @@
 
           <div class="pages" id="page-13">
             <h3><span>Métadonnées</span></h3>
-            <p class="une-phrase">Tout sauf le contenu d'une conversation (qui appelle qui, quand, combien de temps, où).</p>
+            <p class="une-phrase">Tout <span>sauf</span> le contenu d'une conversation (qui appelle qui, quand, combien de temps, où).</p>
             <p class="en-details">Au-delà du contenu de la conversation (une écoute classique), il est possible d'intercepter toutes les informations entourant l'appel : les numéros des correspondants, celui du boîtier téléphonique (appelé IMEI), mais aussi la durée de l’appel, l’heure, la date et, bien sûr, la localisation. Pour un SMS, les métadonnées ne révèlent pas ce qui est écrit, mais qui l’envoie à qui, quand et où. Malgré l’apparence, ces métadonnées (ou «<em>données de connexion</em>» dans la loi française) sont très bavardes, presque autant que des écoutes classiques.</p>
             <p class="quel-probleme">Prenons un exemple, cité dans l'hémicycle par la député Isabelle Attard. Quelqu’un appelle Sida Info Service pendant une dizaine de minutes, puis brièvement un laboratoire d’analyse. Une semaine plus tard, le laboratoire rappelle longuement l’individu. Puis celui-ci téléphone un long moment à son médecin traitant. Sans avoir accès à la conversation, son contenu est assez facile à imaginer… Les métadonnées, dont la collecte est moins strictement encadré que pour les écoutes, fournissent finalement autant d’informations que le contenu des messages, soulignait la député.</p>
             <p class="dans-la-vraie-vie">Si un email était un courrier postal, les «métadonnées» seraient les informations inscrites sur l'enveloppe : qui est le destinataire, où il habite, quand le courrier a été envoyé, de quel endroit, par qui, quelle est la taille du pli, son poids...</p>
@@ -137,7 +137,7 @@
 
           <div class="pages" id="page-14">
             <h3><span>Motifs</span></h3>
-            <p class="une-phrase">Les raisons pour lesquelles on peut surveiller quelqu'un. Elles sont nombreuses (et plutôt larges).</p>
+            <p class="une-phrase">Les <span>raisons pour lesquelles</span> quelqu'un peut être surveillé. Elles sont nombreuses (et plutôt larges).</p>
             <p class="en-details">Les motifs pour placer quelqu'un sous surveillance ne se limitent pas, loin de là, à la <em>«prévention du terrorisme»</em>. La loi en énumère six autres&nbsp;: <em>«l'indépendance nationale, l'intégrité du territoire et la défense nationale»</em>&nbsp;; <em>«les intérêts majeurs de la politique étrangère et la prévention de toute forme d'ingérence étrangère»</em>&nbsp;; <em>«les intérêts économiques, industriels et scientifiques majeurs de la France»</em>&nbsp;; <em>«la prévention des atteintes à la forme républicaine des institutions, des violences collectives de nature à porter atteinte à la sécurité nationale ou de la reconstitution ou d'actions tendant au maintien de groupements dissous»</em>&nbsp;; <em>«la prévention de la criminalité et de la délinquance organisées»</em>&nbsp;; et enfin <em>«la prévention de la prolifération des armes de destruction massive»</em>.</p>
             <p class="quel-probleme">Beaucoup de parlementaires, à droite comme à gauche, trouvent le périmètre <em>«trop large»</em>, y compris l'UMP Henri Guaino. Pour le centriste Hervé Morin, <em>«les intérêts économiques, industriels et scientifiques majeurs»</em>, c'est <em>«la vie entière»</em>... L'EE-LV Sergio Coronado s'est demandé, lui, si la prévention des <em>«violences collectives de nature à porter atteinte à la sécurité nationale»</em> pourrait motiver la surveillance de manifestants à Notre-Dame-des-Landes ou à Sivens, par exemple.</p>
             <p class="dans-la-vraie-vie">A compléter</p>
