--- a/pjlr/index.html
+++ b/pjlr/index.html
@@ -93,7 +93,7 @@
           <div class="pages" id="page-9">
             <h3><span>DGSE</span></h3>
             <p class="une-phrase">Les services <span>extérieurs</span> français, équivalent de la <span>CIA</span>.</p>
-            <p class="en-details">La Direction générale de la sécurité extérieure agit principalement en dehors des frontières. Mais c'est aussi le service le mieux doté en ressources financières, techniques et humaines : un peu plus de 700 millions annuels pour 5000 salariés. Selon <em>Le Monde<em>, la DGSE intercepterait massivement des communications à l'intérieur du territoire et les mettrait à disposition des autres services de renseignement, ce que le gouvernement dément [voir PNCD].</p>
+            <p class="en-details">La Direction générale de la sécurité extérieure agit principalement en dehors des frontières. Mais c'est aussi le service le mieux doté en ressources financières, techniques et humaines : un peu plus de 700 millions annuels pour 5000 salariés. Selon <em>Le Monde</em>, la DGSE intercepterait massivement des communications à l'intérieur du territoire et les mettrait à disposition des autres services de renseignement, ce que le gouvernement dément [voir PNCD].</p>
             <p class="quel-probleme"></p>
             <p class="dans-la-vraie-vie"></p>
             <p class="avec-des-poissons"></p>
