--- a/pjlr/index.html
+++ b/pjlr/index.html
@@ -14,6 +14,8 @@
     </head>
     <body>
 
+      <h1>Projet de loi sur le renseignement : un abcdaire</h1>
+
       <div class="wrapper">
         <div id="menu">
             <ul>
